addition of validation using joi and error handlin
