# src/routes/users.js
@@ -5,5 +5,7 @@ const usersController = require('../controllers/users');
 
 router.get('/',usersController.getAll);
 router.post('/',usersController.addUser);
+router.patch('/:id',usersController.updateUser)
+router.delete('/:id',usersController.deleteUser)
 
 module.exports = router;
